err/vecnet.openmalaria.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vecnet'...
Listing './lib/python3.5/site-packages/vecnet/openmalaria'...
Listing './lib/python3.5/site-packages/vecnet/openmalaria/bin'...
Compiling './lib/python3.5/site-packages/vecnet/openmalaria/bin/expand.py'...
***   File "./lib/python3.5/site-packages/vecnet/openmalaria/bin/expand.py", line 43
    print "%s scenarios generated" % (i-1)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vecnet/openmalaria/scenario'...
Listing './lib/python3.5/site-packages/vecnet/openmalaria/tests'...
Compiling './lib/python3.5/site-packages/vecnet/openmalaria/tests/test_scenario.py'...
***   File "./lib/python3.5/site-packages/vecnet/openmalaria/tests/test_scenario.py", line 163
    print vector
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vecnet.openmalaria-0.9.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
